# UnixSocketIPC

./: .cproject  .project  CMakeLists.txt  readme
32bit/: CMakeLists.txt
64bit/: CMakeLists.txt
source/: reader.cpp  writer.cpp
unix_socket_ipc/: CMakeLists.txt
unix_socket_ipc/unix_socket_ipc_lib/: CMakeLists.txt
unix_socket_ipc/unix_socket_ipc_lib/source/: MessageCommon.h  MessageReceiver.cpp  MessageReceiver.h  MessageSender.cpp  MessageSender.h
unix_socket_ipc/unix_socket_ipc_test/: CMakeLists.txt
unix_socket_ipc/unix_socket_ipc_test/ct/: CMakeLists.txt
unix_socket_ipc/unix_socket_ipc_test/ct/source/: MessageReceiver_test.cpp  MessageSender_test.cpp  UnixSocketIpc_test.cpp  main.cpp
unixsocket/: CMakeLists.txt
unixsocket/source/: MessageCommon.h  MessageReceiver.cpp  MessageReceiver.h  MessageSender.cpp  MessageSender.h
